--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="app.css" />
 
     <title>Museum of Candy</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico?" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico?" />
   </head>
 
   <body>
